# CProject

./: CMakeLists.txt  README.md
assets/maps/: parking1.txt  parking2.txt
assets/vehicles/: bus.txt  car.txt  car_down.txt  car_left.txt  car_right.txt  car_up.txt  truck.txt
include/: game.h  input.h  list.h  map.h  sound.h  ui.h  utils.h  vehicle.h
src/: game.c  input.c  list.c  main.c  map.c  sound.c  ui.c  utils.c  vehicle.c
